--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 
-@import url(http://fonts.googleapis.com/css?family=Open%20Sans:300,400,500,600,700);
-@import url(http://fonts.googleapis.com/css?family=Merriweather:300,400,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Open%20Sans:300,400,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:300,400,500,600,700);
 body {
 	height: 100vh;
 	width: 100vw;
@@ -345,6 +345,24 @@ ul li {
 	font-family: "Merriweather", Arial, sans-serif;
 	color: rgba(255, 255, 255, 0.75);
 	font-weight: 400;
+	
+}
+
+.intro li {
+	font-family: "Merriweather", Arial, sans-serif;
+	color: rgba(255, 255, 255, 0.75);
+	font-weight: 400;
+	text-decoration: none;
+}
+
+.intro li a {
+	text-decoration: none;
+	color: rgba(255, 255, 255, 0.75);
+}
+
+.intro ul {
+	margin-bottom: 5%;
+	margin-top: 5%;
 }
 /* ------------------------------------------------------------------------------
 	 Serives
@@ -563,6 +581,21 @@ ul li {
 	text-align: center;
 	width: 100%!important;
 	z-index: 100;
+}
+
+.project-section {
+	text-align: center;
+	margin-bottom: 2%;
+}
+
+.contact-list {
+	list-style: none;
+	text-decoration: none;
+	color: white;
+	a:link: white;
+	a:visited: white;
+	cursor: pointer;
+	
 }
 /* ------------------------------------------------------------------------------
 	Contact form
